修改配置文件

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "填上一句你想填的话，在index.html中更改"
+description: "喜欢的事情慢慢做，喜欢的生活好好努力，用最舒服的方式去工作和生活"
 ---
 
 {% for post in paginator.posts %}
